--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -6,15 +6,15 @@
 
 .fas{
   cursor: pointer;
-}
 
-.fas:hover{
-  transform: scale(1.1);
-}
-.fas:active{
-  transform: scale(0.98);
-}
+  &:hover{
+    transform: scale(1.03);
+  }
 
+  &:active{
+    transform: scale(0.98);
+  }
+}
 
 .dhorajiwala-logo{
   width: 250px;
@@ -77,19 +77,36 @@
   align-items: center;
   justify-content: center;
   transition: transform 0.3s ease; 
+
+  &:hover {
+    outline: none;
+  }
 }
 
+.search.active .btn{
+  bottom: 0;
+  top: 15%;
+  box-shadow: 2px 2px 0 0 rgba(0, 0, 0, 0.1);
+}
 .search.active .input {
   width: 200px;
   padding: 10px;
+  height: 15px;
   font-size: 18px;
   border: 0;
-  box-shadow: 0 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.1);
+  color: #E02401;
+   
+  &:focus{
+    outline: 0;
+    border-radius: 2px;
+  }
 }
 
-.btn:hover {
-  outline: none;
+::-webkit-input-placeholder { 
+  color: #E02401;
 }
+
 
 .fa-user{
   margin: 0 8px;
